Fix header on animated headder pages from overlapping text and expanding past view on mobile

--- a/styles/troop370-topnav-v2.css
+++ b/styles/troop370-topnav-v2.css
@@ -119,9 +119,6 @@ titlebar heading {
 #title1.animateme {
   width: var(--titlebar-heading-width);
 }
-#title1.animateme heading {
-  width: 100vw;
-}
 .nav-shadow #title1.animateme heading {
   width: var(--titlebar-heading-width);
 }
